--- a/app/assets/stylesheets/modules/_chat-main.scss
+++ b/app/assets/stylesheets/modules/_chat-main.scss
@@ -15,7 +15,7 @@
       .selected-group-name {
         font-size: 20px;
         color: $black;
-        padding: 35px 0 15px 0;
+        padding: 35px 0 15px;
         float: left;
       }
 
