--- a/app/views/messages/_user-info.html.haml
+++ b/app/views/messages/_user-info.html.haml
@@ -1,8 +1,8 @@
 .user-info
   %h4.user-info__login-user-name
-    sample
+    = current_user.name
   .user-info__icons
     = link_to "#" do
-      %i.fa.fa-edit
-    = link_to "#" do
-      %i.fa.fa-cog
+      = fa_icon 'edit', class: 'icon'
+    = link_to edit_user_path(current_user) do
+      = fa_icon 'cog', class: 'icon'
