--- a/app/assets/stylesheets/modules/_chat-main.scss
+++ b/app/assets/stylesheets/modules/_chat-main.scss
@@ -2,6 +2,7 @@
   width: calc(100vw - 300px);
   height: 100%;
   float: right;
+  background-color: $light_gray;
 
   &__header {
     height: 99px;
