--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,28 +1,8 @@
-.message
-  .message__user-name
-    sample
-  .message__posted-time
-    2018/XX/XX XX:XX:XX
-  .message__content
-    sample
-.message
-  .message__user-name
-    sample
-  .message__posted-time
-    2018/XX/XX XX:XX:XX
-  .message__content
-    sample
-.message
-  .message__user-name
-    sample
-  .message__posted-time
-    2018/XX/XX XX:XX:XX
-  .message__content
-    sample
-.message
-  .message__user-name
-    sample
-  .message__posted-time
-    2018/XX/XX XX:XX:XX
-  .message__content
-    sample
+- @messages.each do |message|
+  .message
+    .message__user-name
+      = message.user.name
+    .message__posted-time
+      = message.created_at
+    .message__content
+      = message.content
