--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,8 +1,8 @@
-- @messages.each do |message|
-  .message
-    .message__user-name
-      = message.user.name
-    .message__posted-time
-      = message.created_at.to_s(:datetime)
-    .message__content
-      = message.content
+.message
+  .message__user-name
+    = message.user.name
+  .message__posted-time
+    = message.created_at.to_s(:datetime)
+  .message__content
+    = message.content if message.content.present?
+    = image_tag message.image if message.image.present?
