--- a/app/views/messages/_group-list.html.haml
+++ b/app/views/messages/_group-list.html.haml
@@ -4,4 +4,4 @@
       .group-content__group-name
         = group.name
       .group-content__group-last-message
-        メッセージはまだありません。
+        = group.show_last_message
